--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -32,13 +32,13 @@
     <div id="text">
       <div id="code"> <font color="#FF0000"> <span class="say">亲爱的小果果</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 你来学校陪我真的好开心~，</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 这是我花了一晚上s给你做的小礼物 ^o^</span><br>
+        <span class="say"> </span><br>
+        <span class="say"> 老婆，我爱你</span><br>
+        <span class="say"> 无时无刻不在想你 </span><br>
+        <span class="say"> </span><br>             
         <span class="say"> .. </span><br>
-        <span class="say"> 有时间我就会继续写这个页面哒~ </span><br>             
-        <span class="say"> .. </span><br>
-        <span class="say">  </span><br>
+        <span class="say">   </span><br>
         <span class="say"> .. </span><br>
         <span class="say"> .. </span><br>
         <span class="say"> .. </span><br>
